<resources>
    <string name="app_name">pre_cours4_android</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="Connect_to_MySQL">Connect to MySQL</string>
    <string name="product">Product</string>
    <string name="total">Total :</string>
    <string name="show_cart">Show Cart</string>
    <string name="password">Password</string>
    <string name="pwd">123456</string>
    <string name="user">test</string>
    <string name="username">Username</string>
    <string name="jsonread">JsonRead</string>
    <string name="jsonwrite">JsonWrite</string>
    <string name="test">Test</string>
    <string name="webdata">WebData</string>
</resources>
